--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run",
-    "lint": "eslint ."
+    "test": "cypress run --config-file=cypress.config.js",  
+    "lint": "eslint .",
+    "cypress:open": "cypress open --config-file=cypress.config.js",  
+    "cypress:run": "cypress run --config-file=cypress.config.js"  
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +15,7 @@
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@eslint/js": "^9.6.0",
+    "browserstack-cypress-cli": "^1.31.1",
     "cypress": "^13.12.0",
     "cypress-multi-reporters": "^1.6.4",
     "eslint": "^9.6.0",
